--- a/app/iframe/public/index.less
+++ b/app/iframe/public/index.less
@@ -11,16 +11,16 @@ body,html{
 
 @media only screen and (max-width: 1000px){
     html {
-        font-size: 62.5%;
+        font-size: 62.5% !important;
     }
 }
 @media only screen and (max-width: 670px){
     html {
-        font-size: 50%;
+        font-size: 50% !important;
     }
 }
 @media only screen and (max-width: 450px){
     html {
-        font-size: 40%;
+        font-size: 40% !important;
     }
 }
